--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "lodash": "^4.17.11",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "vue": "^2.6.7"
   },
   "devDependencies": {
     "pm2": "^2.10.3"
